--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,11 @@
 
+@-webkit-viewport   { width: device-width; }
+@-moz-viewport      { width: device-width; }
+@-ms-viewport       { width: device-width; }
+@-o-viewport        { width: device-width; }
+@viewport           { width: device-width; }
+
+
 .list-item:not(:last-of-type):after{
 	content: ',';
 	margin-left: -3px;
